--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -22,6 +23,9 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    include(implementation("com.github.LlamaLad7:MixinExtras:0.1.0-rc5"))
+    include(annotationProcessor("com.github.LlamaLad7:MixinExtras:0.1.0-rc5"))
 }
 
 processResources {
