--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.0.4'
+    id 'fabric-loom' version '1.4-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -36,9 +36,6 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-    include(implementation("com.github.LlamaLad7:MixinExtras:0.1.0-rc5"))
-    include(annotationProcessor("com.github.LlamaLad7:MixinExtras:0.1.0-rc5"))
     modImplementation("com.github.Lortseam.completeconfig:base:2.5.0")
 }
 
